--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<button class="btn btn-primary show-btn">Mostrar alerta</button>
+
+ <%= link_to 'Mostrar alerta (con remote true)', alert_js_path, class: 'btn btn-primary', remote: true %>
+<script>
+    new ProductsView();
+</script>    
